<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.application.Kevin_Wenwen.FreeLunch.AddEvent"
        >

        <!-- TimePicker options -->
        <TextView
            android:id="@+id/time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_time"/>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        <Button
            android:id="@+id/time_button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Start time"
            android:layout_alignParentLeft="true"/>
        <Button
            android:id="@+id/time_button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="end time"
            android:layout_toRightOf="@+id/time_button1"/>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/mode_24_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_24_hours"
            android:checked="true"/>


        <!-- DatePicker Options -->
        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_date"/>

        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"/>


        <TextView
            style="@style/CodeFont"
            android:text="Location" />
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/location"
            android:layout_width="200dp"
            android:hint="Building"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/room"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="Room"
                android:layout_toRightOf="@+id/location"
                />
        </RelativeLayout>


        <TextView
            style="@style/CodeFont"
            android:text="The Event Name" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            style="@style/CodeFont"
            android:text="Details" />
        <EditText
            android:id="@+id/details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Food type, Event type, etc"
          />
        <TextView
            style="@style/CodeFont"
            android:text="Upload Photos" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose From Gallery"/>
        <Button
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Use the Camera"
            android:onClick="useCamera" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upload_photo"
            android:adjustViewBounds="true"
            />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        <Button
            android:id="@+id/submit_event"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Submit"/>
            <Button
                android:id="@+id/clear"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="clear"
                android:layout_toRightOf="@+id/submit_event"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
